# crabquick

./: .gitignore  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  LICENSE  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE7_DELIVERABLES.md  PHASE8_DELIVERABLES.md  README.md  rustfmt.toml  test_fix.rs
crabquick/: Cargo.toml
crabquick-build/: Cargo.toml
crabquick-build/src/: emit.rs  main.rs
crabquick-cli/: Cargo.toml
crabquick-cli/src/: main.rs  repl.rs
crabquick/benches/: benchmarks.rs
crabquick/src/: context.rs  engine.rs  lib.rs
crabquick/src/builtins/: array.rs  boolean.rs  console.rs  error.rs  json.rs  native_functions.rs  number.rs  object.rs  string.rs
crabquick/src/bytecode/: constants.rs  format.rs  opcode.rs
crabquick/src/compiler/: ast.rs  codegen.rs  lexer.rs  mod.rs  parser.rs
crabquick/src/memory/: gc.rs  header.rs
crabquick/src/object/: array.rs  class.rs  function.rs  property.rs  string.rs
crabquick/src/runtime/: compare.rs  conversion.rs  globals.rs  init.rs  operators.rs
crabquick/src/util/: bitpack.rs  mod.rs  strtod.rs  utf8.rs
crabquick/src/value/: array.rs  boxed.rs  string.rs
crabquick/src/vm/: call.rs  exception.rs  interpreter.rs  stack.rs
crabquick/tests/: harness.rs  vm_integration.rs
crabquick/tests/integration/: basic_expressions.rs  control_flow.rs  functions.rs  mod.rs  objects.rs  strings.rs
docs/: ADR-001-project-structure.md  ADR-template.md  PHASE5_VM_GUIDE.md
examples/: README.md  array_debug.js  array_function_call.js  arrays.js  closure_adder.js  closure_counter.js  counter.js  factorial.js  fibonacci.js  fizzbuzz.js  hello.js  math.js  nested_function.js  object_debug.js  object_method_call.js  objects.js  test_42.js  test_apply.js  test_array_arg.js  test_array_chain.js  test_array_contexts.js  test_array_filter.js  test_array_find.js  test_array_foreach.js  test_array_funcs.js  test_array_index.js  test_array_index_bug.js  test_array_isarray.js  test_array_length.js  test_array_literal_index.js  test_array_map.js  test_array_methods2.js  test_array_push.js  test_array_reduce.js  test_array_some_every.js  test_arrow.js  test_arrow2.js  test_arrow_functions.js  test_basic_param.js  test_break.js  (+76 more)
mqjs/: Cargo.toml
mqjs/src/: main.rs  readline.rs
mquickjs/: Cargo.toml
mquickjs-build/: Cargo.toml
mquickjs/benches/: benchmarks.rs
mquickjs/src/: context.rs  engine.rs  lib.rs  value.rs
mquickjs/src/builtins/: array.rs  console.rs  error.rs  function.rs  json.rs  math.rs  mod.rs  native_functions.rs  number.rs  object.rs  regexp.rs  string.rs  typed_array.rs
mquickjs/src/bytecode/: constants.rs  format.rs  function.rs  mod.rs  opcode.rs
mquickjs/src/compiler/: ast.rs  codegen.rs  debug.rs  lexer.rs  mod.rs  parser.rs
mquickjs/src/memory/: allocator.rs  gc.rs  handle.rs  header.rs  mod.rs
mquickjs/src/object/: array.rs  function.rs  mod.rs  object.rs  property.rs
mquickjs/src/runtime/: conversion.rs  init.rs  mod.rs  operators.rs
mquickjs/src/util/: dtoa.rs
mquickjs/src/value/: array.rs  atom.rs  boxed.rs  core.rs  mod.rs
mquickjs/src/vm/: exception.rs  interpreter.rs  mod.rs  stack.rs
mquickjs/tests/: harness.rs  lib.rs  vm_integration.rs
mquickjs/tests/integration/: arrays.rs  variables.rs
notes/: INDEX.md  README.md  execution-model.md  implementation-plan.md  memory-management.md  modules.md
notes/design/: architecture.md  data-structures.md  memory-management-design.md
notes/phases/: PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE6_DELIVERABLES.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE8_IMPLEMENTATION_SUMMARY.md  PHASE9_IMPLEMENTATION_SUMMARY.md
notes/reference/: COMPILER_QUICK_REFERENCE.md
notes/remaining/: FUNCTION_CALLS_COMPLETE.md  FUNCTION_CALLS_PLAN.md  NEXT_STEPS.md  REMAINING_WORK_OVERVIEW.md  TYPE_COERCION_COMPLETE.md
tests/: microbench.js  test_builtin.js  test_loop.js
tests/compliance/: README.md
tests/fuzz/: README.md
tests/integration/: README.md  basic.rs
tests/unit/: README.md
