[package]
name = "crabquick-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Build-time stdlib compiler for CrabQuick"

[dependencies]
crabquick = { path = "../crabquick" }
