[package]
name = "crabquick-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line REPL for CrabQuick JavaScript engine"

[[bin]]
name = "crabquick"
path = "src/main.rs"

[dependencies]
crabquick = { path = "../crabquick", features = ["std"] }
rustyline = { version = "13.0", optional = true }

[features]
default = ["repl"]
repl = ["rustyline"]
