[package]
name = "crabquick"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "A minimal JavaScript engine in Rust - core library"
keywords = ["javascript", "js", "engine", "embedded", "minimal"]
categories = ["embedded", "parser-implementations", "no-std"]

[features]
default = []
std = []

[lints]
workspace = true

[dependencies]
# Core library maintains minimal dependencies for no_std support
libm = "0.2"

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "benchmarks"
harness = false
